cluster/kubernetes/apps/observability/kube-prometheus-stack/ingress/alertmanager-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
  labels:
    route-label: external-dns-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: alertmanager
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
